--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,31 @@
+# Database Configuration
+MONGODB_URI=mongodb://localhost:27017/ymgs-pharmacy
+# Example for MongoDB Atlas:
+# MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/ymgs-pharmacy
+
+# Authentication
+JWT_SECRET=your_jwt_secret_key_here
+
+# Cloudinary Configuration (for image storage)
+CLOUDINARY_NAME=your_cloudinary_cloud_name
+CLOUDINARY_API_KEY=your_cloudinary_api_key
+CLOUDINARY_SECRET_KEY=your_cloudinary_secret_key
+
+# Payment Gateway Configuration
+# Stripe
+STRIPE_SECRET_KEY=sk_test_your_stripe_secret_key
+
+# Razorpay (Optional)
+RAZORPAY_KEY_ID=your_razorpay_key_id
+RAZORPAY_SECRET_KEY=your_razorpay_secret_key
+
+# CORS Configuration
+FRONTEND_URL=http://localhost:3000
+ADMIN_URL=http://localhost:3001
+
+# Server Configuration
 PORT=4000
-MONGODB_URI=
-CLOUDINARY_API_KEY=
-CLOUDINARY_SECRET_KEY=
-CLOUDINARY_NAME=
-JWT_SECRET=
-ADMIN_EMAIL=admin@gmail.com
-ADMIN_PASSWORD=admin123
-STRIPE_SECRET_KEY=
-RAZORPAY_SECRET_KEY=
-RAZORPAY_KEY_ID=
-FRONTEND_URL=http://localhost:5173
-ADMIN_URL=http://localhost:5174
+
+# Production URLs (for production deployment)
+# FRONTEND_URL=https://www.ymgspharmacy.com
+# ADMIN_URL=https://admin.ymgspharmacy.com
